--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
   <div class="align">
     <div class="container">
-      <img src="./images/image-qr-code.png" alt="QRCode">
+      <img src="./Project-QRCode/images/image-qr-code.png" alt="QRCode">
       <h2>
         Improve your front-end skills by building projects
       </h2>
