--- a/Project-QRCode/index.html
+++ b/Project-QRCode/index.html
@@ -35,13 +35,14 @@
     }
 
     .align{
-      position: fixed;
-      inset: 0;
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      margin: 0;
     }
     .container{
       position: absolute;
-      inset: 0;
-      margin: auto;
+      margin: 0 auto;
       width: 300px;
       height: 500px;
       padding: 20px;
@@ -60,7 +61,7 @@
   </style>
 </head>
 <body>
-  <div class="align">
+  <main class="align">
     <div class="container">
       <img src="./images/image-qr-code.png" alt="QRCode">
       <h2>
@@ -70,11 +71,11 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
     </div>
-  </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">André Haswolinsk</a>.
-  </div>
+  </footer>
 </body>
 </html>
