--- a/Project-PreviewCard/ProductPreviewCard/index.html
+++ b/Project-PreviewCard/ProductPreviewCard/index.html
@@ -13,8 +13,7 @@
   <style>
     html,
     body{
-      margin: 0;
-      padding: 0;
+      padding: 10px;
       font-family: 'Montserrat', sans-serif;
       background-color: hsl(30, 38%, 92%);
     }
