--- a/Project-PreviewCard/ProductPreviewCard/index.html
+++ b/Project-PreviewCard/ProductPreviewCard/index.html
@@ -77,7 +77,7 @@
       background-color: white;
     }
     .attribution{
-      position: fixed;
+      position: relative;
       inset: auto 0 0 0;
       font-size: 11px; 
       text-align: center; 
@@ -103,6 +103,9 @@
         width: 240px;
         padding: 35px;
         border-radius: 0 10px 10px 0;
+      }
+      .attribution{
+        position: fixed;
       }
     }
   </style>
@@ -133,7 +136,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">André Haswolinsk</a>.
+    Coded by <a href="https://github.com/haswolinsk">André Haswolinsk</a>.
   </footer>
 </body>
 </html>
