--- a/Project-PreviewCard/StatsPreviewCard/index.html
+++ b/Project-PreviewCard/StatsPreviewCard/index.html
@@ -22,15 +22,15 @@
         </p>
   
         <div class="values">
-          <div class="blocks">
+          <div>
             <h2>10k+</h2>
             <p class="font">COMPANIES</p>
           </div>
-          <div class="blocks">
+          <div>
             <h2>314</h2>
             <p class="font">TEMPLATES</p>
           </div>
-          <div class="blocks">
+          <div>
             <h2>12M+</h2>
             <p class="font">QUERIES</p>
           </div>
@@ -44,7 +44,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">André Haswolinsk</a>.
+    Coded by <a href="https://github.com/haswolinsk">André Haswolinsk</a>.
   </footer>
 </body>
 </html>
